--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ bld/
 
 # Visual Studio 2015 cache/options directory
 .vs/**
+./Project_Code_S2019/.vs/**
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
