delete handling was added

--- a/Project_Code_S2019/Restaurant/Restaurant.vcxproj.filters
+++ b/Project_Code_S2019/Restaurant/Restaurant.vcxproj.filters
@@ -152,7 +152,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Demo_Main.cpp" />
     <ClCompile Include="CMUgraphicsLib\jpeg\jcomapi.c">
       <Filter>CMUGraphicsLib\JPEG</Filter>
     </ClCompile>
@@ -292,6 +291,7 @@
       <Filter>GUI</Filter>
     </ClCompile>
     <ClCompile Include="utility functions\strutils.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMUgraphicsLib\Manual.txt">
