--- a/Project_Code_S2019/Restaurant/Restaurant.vcxproj
+++ b/Project_Code_S2019/Restaurant/Restaurant.vcxproj
@@ -155,7 +155,7 @@
     <ClCompile Include="CMUgraphicsLib\keyqueue.cpp" />
     <ClCompile Include="CMUgraphicsLib\mousequeue.cpp" />
     <ClCompile Include="CMUgraphicsLib\windowinput.cpp" />
-    <ClCompile Include="Demo_Main.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Events\CancelEvent.cpp" />
     <ClCompile Include="Events\Event.cpp" />
     <ClCompile Include="Events\ArrivalEvent.cpp" />
