--- a/.gitignore
+++ b/.gitignore
@@ -261,4 +261,12 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
- 
+ Project_Code_S2019/Restaurant.sdf
+Project_Code_S2019/Restaurant.sdf
+Project_Code_S2019/Debug/Restaurant.pdb
+Project_Code_S2019/Restaurant/Debug/ArrivalEvent.obj
+Project_Code_S2019/Restaurant/Debug/vc110.idb
+Project_Code_S2019/Restaurant/Debug/CL.read.1.tlog
+Project_Code_S2019/Restaurant/Debug/CL.write.1.tlog
+Project_Code_S2019/Restaurant/Debug/Restaurant.log
+Project_Code_S2019/Restaurant/Debug/vc110.pdb
