Trying to enhance .gitignore :'(

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,49 @@ Project_Code_S2019/Restaurant/Debug/CL.read.1.tlog
 Project_Code_S2019/Restaurant/Debug/CL.write.1.tlog
 Project_Code_S2019/Restaurant/Debug/Restaurant.log
 Project_Code_S2019/Restaurant/Debug/vc110.pdb
+Project_Code_S2019/Restaurant/Debug/jidctint.obj
+Project_Code_S2019/Debug/Restaurant.pdb
+Project_Code_S2019/Restaurant/Debug/ArrivalEvent.obj
+Project_Code_S2019/Restaurant/Debug/CL.read.1.tlog
+Project_Code_S2019/Restaurant/Debug/CL.write.1.tlog
+Project_Code_S2019/Restaurant/Debug/CMUgraphics.obj
+Project_Code_S2019/Restaurant/Debug/Event.obj
+Project_Code_S2019/Restaurant/Debug/Motorcycle.obj
+Project_Code_S2019/Restaurant/Debug/Order.obj
+Project_Code_S2019/Restaurant/Debug/Restaurant.log
+Project_Code_S2019/Restaurant/Debug/colors.obj
+Project_Code_S2019/Restaurant/Debug/image.obj
+Project_Code_S2019/Restaurant/Debug/jcomapi.obj
+Project_Code_S2019/Restaurant/Debug/jcparam.obj
+Project_Code_S2019/Restaurant/Debug/jdapimin.obj
+Project_Code_S2019/Restaurant/Debug/jdapistd.obj
+Project_Code_S2019/Restaurant/Debug/jdatasrc.obj
+Project_Code_S2019/Restaurant/Debug/jdcoefct.obj
+Project_Code_S2019/Restaurant/Debug/jdcolor.obj
+Project_Code_S2019/Restaurant/Debug/jdhuff.obj
+Project_Code_S2019/Restaurant/Debug/jddctmgr.obj
+Project_Code_S2019/Restaurant/Debug/jdinput.obj
+Project_Code_S2019/Restaurant/Debug/jdmainct.obj
+Project_Code_S2019/Restaurant/Debug/jdmarker.obj
+Project_Code_S2019/Restaurant/Debug/jdmaster.obj
+Project_Code_S2019/Restaurant/Debug/jdmerge.obj
+Project_Code_S2019/Restaurant/Debug/jdphuff.obj
+Project_Code_S2019/Restaurant/Debug/jdpostct.obj
+Project_Code_S2019/Restaurant/Debug/jdsample.obj
+Project_Code_S2019/Restaurant/Debug/jdtrans.obj
+Project_Code_S2019/Restaurant/Debug/jerror.obj
+Project_Code_S2019/Restaurant/Debug/jidctflt.obj
+Project_Code_S2019/Restaurant/Debug/jidctfst.obj
+Project_Code_S2019/Restaurant/Debug/jidctred.obj
+Project_Code_S2019/Restaurant/Debug/jmemmgr.obj
+Project_Code_S2019/Restaurant/Debug/jmemnobs.obj
+Project_Code_S2019/Restaurant/Debug/jpegload.obj
+Project_Code_S2019/Restaurant/Debug/jquant1.obj
+Project_Code_S2019/Restaurant/Debug/jutils.obj
+Project_Code_S2019/Restaurant/Debug/jquant2.obj
+Project_Code_S2019/Restaurant/Debug/keyqueue.obj
+Project_Code_S2019/Restaurant/Debug/link.read.1.tlog
+Project_Code_S2019/Restaurant/Debug/windowinput.obj
+Project_Code_S2019/Restaurant/Debug/vc110.pdb
+Project_Code_S2019/Restaurant/Debug/vc110.idb
+Project_Code_S2019/Restaurant/Debug/mousequeue.obj
