HmanA6399 Work v3 : function ServeAvailableOrders() made bool

--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,9 @@ Project_Code_S2019/Restaurant/Debug/windowinput.obj
 Project_Code_S2019/Restaurant/Debug/vc110.pdb
 Project_Code_S2019/Restaurant/Debug/vc110.idb
 Project_Code_S2019/Restaurant/Debug/mousequeue.obj
+Project_Code_S2019/Restaurant.sdf
+Project_Code_S2019/Restaurant/Debug/vc110.idb
+Project_Code_S2019/Restaurant/Debug/CL.write.1.tlog
+Project_Code_S2019/Restaurant/Debug/Restaurant.log
+Project_Code_S2019/Restaurant/Debug/link.read.1.tlog
+Project_Code_S2019/Restaurant/Debug/vc110.pdb
