--- a/.gitignore
+++ b/.gitignore
@@ -323,3 +323,7 @@ Project_Code_S2019/Restaurant/Debug/Restaurant.log
 Project_Code_S2019/Restaurant/Debug/link.read.1.tlog
 Project_Code_S2019/Restaurant/Debug/vc110.pdb
 Project_Code_S2019/Restaurant/Debug/Restaurant.obj
+Project_Code_S2019/Restaurant/Debug/Restaurant.obj
+Project_Code_S2019/Restaurant.sdf
+Project_Code_S2019/Restaurant.v11.suo
+Project_Code_S2019/Debug/Restaurant.pdb
