--- a/Project_Code_S2019/Restaurant/Restaurant.vcxproj
+++ b/Project_Code_S2019/Restaurant/Restaurant.vcxproj
@@ -21,6 +21,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
+    <CLRSupport>false</CLRSupport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -117,6 +118,7 @@
     <ClInclude Include="Rest\RegionManager.h" />
     <ClInclude Include="Rest\Restaurant.h" />
     <ClInclude Include="SaveAction.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="utility functions\strutils.h" />
   </ItemGroup>
   <ItemGroup>
@@ -167,6 +169,7 @@
     <ClCompile Include="Rest\RegionManager.cpp" />
     <ClCompile Include="Rest\Restaurant.cpp" />
     <ClCompile Include="SaveAction.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="utility functions\strutils.cpp" />
   </ItemGroup>
   <ItemGroup>
